# django-shopify-sync

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  docker-compose.yml  pyproject.toml  test.py  tox.ini
sandbox/: settings.py  urls.py  wsgi.py
shopify_sync/: __init__.py  admin.py  apps.py  encoders.py  handlers.py
shopify_sync/migrations/: 0001_initial.py  0002_auto_20181220_1714.py  0002_auto_20190107_1622.py  0003_merge_20190107_1818.py  0004_auto_20190621_0852.py  0005_remove_customer_default_address.py  0006_auto_20190712_0702.py  0007_order_shipping_address.py  0008_order_fulfillments.py  0010_auto_20230222_1647.py  0010_auto_20240729_1018.py  0011_auto_20240201_1549.py  0011_auto_20240806_1405.py  0012_alter_customer_orders_count_and_more.py  0013_alter_order_processing_method_and_source_name.py
shopify_sync/models/: __init__.py  address.py  base.py  carrier_service.py  collect.py  custom_collection.py  customer.py  image.py  line_item.py  metafield.py  option.py  order.py  product.py  script_tag.py  session.py  shop.py  smart_collection.py  variant.py  webhook.py
shopify_sync/tests/: __init__.py  recipes.py  test_collection_sync.py  test_helpers.py  test_json_encoding.py  test_pagination.py  test_product_sync.py  test_product_tags.py  urls.py
shopify_sync/tests/fixtures/: customcollection_created.json  customcollection_updated.json  product_created.json  smartcollection_created.json
