[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-shopify-sync"
version = "3.0.0"
description = "A package for synchronizing Django models with Shopify resources."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.md"
homepage = "https://gitlab.com/thelabnyc/django-shopify-sync"
repository = "https://gitlab.com/thelabnyc/django-shopify-sync"
license = "MIT"
packages = [
    {include = "shopify_sync"}
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2"
django-shopify-webhook = ">=0.6.0"
ShopifyAPI = "^12.6.0"
jsonfield = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
python-dateutil = "^2.9.0"
psycopg2-binary = "^2.9.9"
ipdb = "^0.13.13"
flake8 = "^7.1.1"
tox = "^4.18.0"
coverage = "^7.6.1"
model-bakery = "^1.19.5"

[tool.isort]
profile = "black"
from_first = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
