[build-system]
requires = [ "poetry-core>=2.1.2",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-shopify-sync"
version = "3.0.0"
description = "A package for synchronizing Django models with Shopify resources."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.md"
homepage = "https://gitlab.com/thelabnyc/django-shopify-sync"
repository = "https://gitlab.com/thelabnyc/django-shopify-sync"
license = "MIT"
packages = [
    {include = "shopify_sync"}
]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2"
django-shopify-webhook = ">=0.6.0,<0.8.0"
ShopifyAPI = "^12.7.0"
jsonfield = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
python-dateutil = "2.9.0.post0"
psycopg2-binary = "2.9.10"
ipdb = "0.13.13"
flake8 = "7.2.0"
tox = "4.26.0"
coverage = "7.8.2"
model-bakery = "1.20.4"

[tool.isort]
profile = "black"
from_first = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
