[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-shopify-sync"
version = "3.1.1"
description = "A package for synchronizing Django models with Shopify resources."
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "django (>=5.2)",
    "django-shopify-webhook (>=0.8.0,<0.9.0)",
    "ShopifyAPI (>=12.7.0,<13)",
    "jsonfield (>=3.2.0)",
]
requires-python = ">=3.11"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-shopify-sync"
Repository = "https://gitlab.com/thelabnyc/django-shopify-sync"

[dependency-groups]
dev = [
    "python-dateutil (==2.9.0.post0)",
    "psycopg2-binary (==2.9.11)",
    "ipdb (==0.13.13)",
    "ruff (>=0.14.11)",
    "tox (==4.34.1)",
    "coverage (==7.13.1)",
    "model-bakery (==1.21.0)",
    "tox-uv>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shopify_sync"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true", "uv build"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
